# kimi-cli

./: ARCHITECTURE_AND_RUST_MIGRATION.md
docs/: AGENTS.md
src/analysis/rki-rs/: Cargo.toml  config.toml
src/analysis/rki-rs/.github/workflows/: ci.yml
src/analysis/rki-rs/scripts/: check_golden.sh  diff_golden_vs_python_export.sh
src/analysis/rki-rs/src/: acp.rs  agent.rs  agents_md.rs  approval.rs  capability.rs  capability_registry.rs  cli.rs  compaction.rs  config.rs  config_registry.rs  config_watcher.rs  context.rs  context_tree.rs  error.rs  feature_flags.rs  hooks.rs  identity.rs  injection.rs  lib.rs  llm.rs  main.rs  memory.rs  message.rs  orchestrator.rs  question.rs  runtime.rs  session.rs  skills.rs  slash.rs  soul.rs  steer.rs  store.rs  stream.rs  token.rs  toolset.rs  turn_input.rs  ui.rs  user_input.rs  wire.rs  workdir_ls.rs
src/analysis/rki-rs/src/background/: executor.rs  manager.rs  mod.rs  types.rs
src/analysis/rki-rs/src/identity/: oauth.rs
src/analysis/rki-rs/src/llm/: anthropic.rs  openai.rs
src/analysis/rki-rs/src/mcp/: client.rs  mod.rs  tools.rs
src/analysis/rki-rs/src/memory/: embedding.rs
src/analysis/rki-rs/src/notification/: llm.rs  manager.rs  mod.rs  task_terminal.rs  types.rs
src/analysis/rki-rs/tests/: bootstrap_integration.rs  cli_integration.rs  golden_wire.rs
src/analysis/rki-rs/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  one-dark.toml  one-light.toml  solarized-dark.toml  solarized-light.toml  tokyo-night-storm.toml
(+24 files in other folders)
