[package]
name = "rki-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rki"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tempfile = "3"
walkdir = "2"
dirs = "5"
serde_yaml = "0.9"
eventsource-stream = "0.2"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
base64 = "0.22"
libc = "0.2"
